# salesagent

./: .dockerignore  .duplication-baseline  .env.template  .gitignore  .mcp.json  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.fly  Makefile  README.md  WEBHOOK_BUG_FINAL_REPORT.md  app.json  conductor.json  crontab  docker-compose.core.yml  docker-compose.dev.yml  docker-compose.e2e.yml  docker-compose.multi-tenant.yml  docker-compose.yml  fly.toml  mypy.ini  openapi.json  openapi.yaml  pyproject.toml  pytest.ini  release-notes.md  run_all_tests.sh  show_principal_mappings.py  test_webhook_url.py  tox.ini  worktree-add.sh
.claude/agents/: qc-validator.md
.claude/commands/: obligation-team.md  research.md  team.md
.claude/formulas/: bug-triage.yaml  task-execute.yaml
.claude/notes/: adcp-3.12-migration.md  fastapi-unification-proposal.md  pr-draft.md  typed-boundaries-principle.md
.claude/scripts/: cook_formula.py
.claude/skills/: .agent-db.env
.github/: pr-1170-squash-description.md
.github/ISSUE_TEMPLATE/: test-coverage-remediation.md
.github/workflows/: ipr-agreement.yml  publish-image.yml  release-please.yml  storyboard.yml  test.yml
.pre-commit-hooks/: check_code_duplication.py  check_docs_links.py  check_rootmodel_access.py  check_roundtrip_tests.py  check_sqlalchemy_2_0.py
alembic/versions/: 06b1d10a8992_audit_implementation_config_rows_.py  102ce62707b9_merge_issue_71_reporting_capabilities_.py  13b5e73b6983_add_composite_index_for_inventory_tree_.py  190d6e98754b_add_freewheel_placement_stats.py  1aa2f5893a4d_convert_json_text_to_jsonb.py  20c448890df9_add_external_identity_to_audit_log.py  319e6b366151_add_package_pricing_columns.py  3a085858fafb_merge_auto_naming_and_audit_log_signing_.py  3a16c5fc27ce_migrate_all_datetime_to_timestamptz.py  4ccbe6f82b4b_add_supported_billing_to_tenants.py  5cd737097039_add_agent_gam_cache_table_and_gam_order_.py  5e48d3ddc7f2_add_properties_and_property_tags_to_.py  6b31bcf4ebe2_merge_reporting_capabilities_backfill_.py  789f9d88265e_add_push_notification_configs_signing_.py  7c3073bd70cf_add_freewheel_inventory_cache.py  7f077607dc61_add_tenant_feature_flag_columns_for_.py  8407a32e9b07_rename_user_role_manager_to_member.py  8c4e44fda739_add_partial_unique_index_on_tenant_.py  9cc36dfc54f6_merge_migration_heads_after_main_merge.py  a098c8bb42ed_add_pricing_option_constraints.py  ab57bdcf4bd8_add_gin_indexes_for_property_tags.py  b0545900b6b1_add_tenant_auto_naming_enabled.py  b118da383e3c_add_managed_mode_to_tenant.py  b4e2bffdd4f8_replace_buyer_ref_with_media_buy_id_in_.py  ba4adebb9c45_merge_migration_heads_after_pr_186_193_.py  bcd40819d318_add_tenant_report_pre_start_buys.py  c1d2e3f4a5b6_merge_signing_and_auto_naming_heads.py  c3d10c6688d1_merge_migration_heads.py  c409a0075fc7_add_creative_pre_approval_gate_flag.py  c46693e8c3dc_merge_signing_harness_migration_heads.py  c4d5e6f7a8b9_rename_managed_externally_to_is_embedded.py  c612d0326eb0_add_account_approval_mode_to_tenants.py  c8404b483cf3_backfill_and_require_reporting_capabilities.py  c8a5e1d3f4b9_add_pending_provision_and_auto_provision.py  cc000128065d_add_modern_ux_feature_flag.py  cdaa4d359774_add_placement_ids_to_creative_.py  cf421634d3c8_drop_buyer_ref_from_media_buys.py  (+38 more)
core/: README.md  SDK_FEEDBACK.md  __init__.py  auth.py  idempotency.py  main.py  management_api.py  tenancy.py
docs/: CRITICAL-schema-validation-failure.md  MOCK_ADAPTER_AI_TEST_ORCHESTRATION.md  SETUP.md  TROUBLESHOOTING.md  a2a-guide.md  a2a-implementation-guide.md  ai-creative-summary.md  api.md  creative-preview-architecture.md  database-resilience.md  deployment.md  docker-hub-auth.md  format-discovery-ux-improvements.md  format-size-mapping-proposal.md  gam-product-configuration-guide.md  index.md  quickstart.md  security.md  webhooks.md
examples/: upstream_product_catalog_server.py  upstream_with_implementation.py
fly/: nginx.conf
monitoring/: grafana_dashboard.json
product_catalog_providers/: ai.py  database.py  signals.py
scripts/: FIX_INVALID_AD_UNITS.md  audit_e2e_tests.py  check_mypy_diff.py  check_mypy_no_regression.py  check_pydantic_adcp_alignment.py  export_openapi.py  fix_invalid_ad_unit_ids.py  gam_prerequisites_check.py  generate_frontend_types.py  healthcheck.py  inspect_capabilities.py  managed_mode_smoke.sh  migrate_product_configs.py  probe_wonderstruck.py  reset_stuck_sync.sh  run-test.sh  run_admin_ui.py  run_server.py  run_tests.py  seed_dashboard_demo.py  seed_demo_tenant.py  seed_signing_demo.py  setup-dev.py  springserve_compare_wire.py  standard_a2a_client.py  storyboard-check.sh  storyboard-reset-compose.sh  test-sales-agent-local-a2a.sh  test-sales-agent-local-mcp.sh  test-stack.sh  test_gam_automation_dry_run.py  test_list_properties_fix.py  test_mcp_client.py  test_nginx_routing.py  test_service_account_auth.py  validate_a2a_fixes.py  validate_adapter_usage.py  validate_pydantic_against_adcp_schemas.py  verify_embedded_mode.py  verify_sprint_1_8.py
signatures/: ipr-signatures.json
src/: app.py
static/: validation.js
templates/: _breadcrumb.html  _embedded_lock_banner.html  _embedded_locked_page.html  add_creative_format_ai.html  add_inventory_profile.html  add_product.html  add_product_ai.html  add_product_gam.html  add_product_mock.html  agent_media_buy_detail.html  agent_media_buy_list.html  base.html  bulk_product_upload.html  buyer_routing.html  choose_tenant.html  create_account.html  create_principal.html  create_tenant.html  creative_agent_form.html  creative_formats.html  creative_management.html  creative_review.html  creatives_list.html  edit_creative_format.html  edit_inventory_profile.html  edit_product.html  edit_product_mock.html  error.html  index.html  inventory_browser.html  inventory_profiles_list.html  landing.html  login.html  mcp_test.html  media_buy_detail.html  media_buys_list.html  oidc_test_success.html  policy_review.html  policy_settings_comprehensive.html  preview_inventory_profile.html  (+22 more)
tests/: a2a_helpers.py  conftest.py
tools/: validate_mcp_schemas.py
(+1393 files in other folders)
